[package]
name = "printf-compat"
description = "printf reimplemented in Rust"
version = "0.2.1"
repository = "https://github.com/lights0123/printf-compat"
authors = ["lights0123 <developer@lights0123.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
bitflags = "2.9.1"
itertools = { version = "0.14.0", default-features = false }

[features]
default = ["std"]
std = []
