[package]
name = "printf-compat"
description = "printf reimplemented in Rust"
version = "0.3.1"
repository = "https://github.com/lights0123/printf-compat"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["development-tools::ffi", "embedded", "no-std", "no-std::no-alloc"]

[dependencies]
bitflags = "2.9.1"
itertools = { version = "0.14.0", default-features = false }

[features]
default = ["std"]
std = []
